--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
+    <link rel="icon"  href="/favicon.ico">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PGOSB</title>
