antes de implementar modulos

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body class="">
     <div id="root"></div>
+    <div id="backdrop-root"></div>
     <script type="module" src="/src/main.jsx"></script>
 </body>
 
