--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <!-- <script src="/config.json" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PGOSB</title>
+    <title>GRES</title>
 </head>
 
 <body class="">
