--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
     <link rel="icon" href="/favicon.ico">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <!-- <script src="/config.json" /> -->
+    <!--  TEST <script src="/config.json" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GRES</title>
 </head>
@@ -16,5 +16,7 @@
     <div id="backdrop-root"></div>
     <script type="module" src="/src/main.jsx"></script>
 </body>
+
+
 
 </html>
